--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "expo-app-loading": "^1.0.1",
     "expo-camera": "~9.1.0",
     "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-native-screens": "^2.18.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "yup": "^0.32.9",
-    "react-native-maps": "0.27.1",
-    "expo-location": "~10.0.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
