--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "formik": "^2.2.6",
+    "lottie-react-native": "^4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animated-loader": "0.0.9",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "0.27.1",
