--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "app-capstone-2",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/SmartCizLogo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/SmartCizLogo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -27,7 +27,7 @@
       "package": "com.smartcitizen.app"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/SmartCizLogo.png"
     }
   }
 }
